--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "newbie-monsters",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://Nattarintra.github.io/newbie-monsters-app",
+  "homepage": "https://Nattarintra.github.io/monsters-app",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "gh-pages": "^3.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
